--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>要一直一直一直在一起</title>
+	<title>都不准和我抢（手动微笑）</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="生日礼物，惊喜,有趣,最美" />
 	<meta name="description" content="世界上最美的女人，是老吸，但是她不喜欢我 ಥ_ಥ " />
