--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="https://shijieshangzuimeidenvren.github.io" class="thumbnail">
+				<a href="#" class="thubnail">
 					<img src="img/2.jpg" alt="...">
 				</a>
 			</div>
