--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ var _hmt = _hmt || [];
 			</div>
 		</div>
 	</div>
-
+<bgsound loop="-1" src="http://www.xiami.com/play?ids=/song/playlist/id/373957/object_name/default/object_id/0#loaded" >
+	
 </body>
 </html>
