--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ var _hmt = _hmt || [];
 			</div>
 		</div>
 	</div>
-<bgsound loop="-1" src="http://115.28.188.96/res/hao.mp3">
-	
+<audio src="http://115.28.188.96/res/hao.mp3">
+</audio>	
 </body>
 </html>
