--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@ var _hmt = _hmt || [];
 			</div>
 		</div>
 	</div>
-<audio src="http://115.28.188.96/res/hao.mp3">
+<audio src="http://115.28.188.96/res/hao.mp3" autoplay>
 <p>If you are reading this, it is because your browser does not support the audio element.     </p>
+<embed src="http://115.28.188.96/res/hao.mp3" width="180" height="90" hidden="true" />
 </audio>
 </body>
 </html>
